Override CreateNewTarget in the HeadlessDevToolsManagerDelegate to be able to create new tabs in headless mode from the json/new endpoint

BUG=699392

Review-Url: https://codereview.chromium.org/2735943005
Cr-Commit-Position: refs/heads/master@{#455669}

Former-commit-id: 8e621e208f82c7136a6dc8f32e0db7c6df00685d